--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="TemplateMo">
+    <meta name="author" content="Jesser">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
     <title>Contactanos</title>
@@ -16,13 +16,9 @@
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-finance-business.css">
+    <link rel="stylesheet" href="assets/css/vinotinto.css">
     <link rel="stylesheet" href="assets/css/owl.css">
 <!--
-
-Finance Business TemplateMo
-
-https://templatemo.com/tm-545-finance-business
 
 -->
   </head>
